edit the app.js and sign-in btn color

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+.bg-slate {
+  background-color: #5a53c4 !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn-slate {
+  background-color: #5a53c4 !important;
+  color: white !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bg-light-slate {
+  background-color: #d4d2fc !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-outline-slate {
+  border-color: #5a53c4 !important;
+  color: #5a53c4 !important;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-outline-slate:hover {
+  background-color: #5a53c4 !important;
+  color: white !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-slate {
+  color: #5a53c4 !important;
+}
+
+.border-slate {
+  border-color: #5a53c4 !important;
 }
